<resources>
    <string name="app_name">ApplePen</string>
    <string name="email">Email</string>
    <string name="password">salasõna</string>
    <string name="login">Logi sisse</string>
    <string name="unustatud">Unustasid salasõna?</string>
    <string name="registreeri">Registreeri kasutajaks</string>
    <string name="katsed">Katseid alles</string>
    <string name="lähtesta">Lähtesta parool</string>
    <string name="eesnimi">Eesnimi</string>
    <string name="perenimi">Perekonnanimi</string>
    <string name="register">Registreeri</string>
    <string name="logiv">Logi välja</string>
    <string name="kasutaja">Kasutaja profiil</string>
    <string name="pilt">Lisa pilt</string>
    <string name="Andmebaas">Andmebaas</string>
    <string name="text">Lisa tooteid andmebaasi</string>
    <string name="toote_string">Nimi</string>
    <string name="kogus_string">Kogus</string>
    <string name="hind_string">Hind</string>
    <string name="lisa">Lisa</string>
    <string name="uuenda">uuenda</string>
    <string name="kustuta">kustuta</string>
</resources>
