<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.user.andmebaas.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_weight="0.1"
        android:src="@drawable/applepen" />



    <EditText
        android:id="@+id/epost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="?android:attr/borderlessButtonStyle"/>


    <TextView
        android:id="@+id/unustatud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unustatud"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/registreeri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/registreeri" />
</LinearLayout>
