<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.user.andmebaasgruppit.KuvaDetailid">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/text"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/toote_string"/>
            <EditText
                android:id="@+id/nimiDetail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kogus_string"/>
            <EditText
                android:id="@+id/kogusDetail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hind_string"/>
            <EditText
                android:id="@+id/hindDetail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""/>
            <TextView
                android:id="@+id/textview5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="€"/>
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_uuenda"
            android:layout_weight="1"
            android:text="@string/uuenda"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_kustuta"
            android:layout_weight="1"
            android:text="@string/kustuta"/>
    </LinearLayout>


</LinearLayout>
