<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="com.example.user.andmebaasgruppit.UserProfileActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/eesnimi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profileEesnimi"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/perenimi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profilePerenimi"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:textAllCaps="true"/>

        </TableRow>
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profileEpost"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </TableRow>

    </TableLayout>

</LinearLayout>